# rust-rpico2-discovery

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
examples/: bh1750_i2c.rs  blinky.rs  bme280_i2c.rs  bmp280_i2c.rs  convert_jpg_to_bmp.py  dht20_i2c.rs  epdk.rs  gc9a01_spi.rs  gc9a01_spi_text.rs  gdem0154z90.rs  gdem0154z90_text.rs  grove_light_sensor_adc.rs  grove_moisture_sensor_adc.rs  hs3003_i2c.rs  hs3003_i2c_debug.rs  i2c_scan.rs  ili9341_spi.rs  ili9341_spi_text.rs  lis3dh_i2c.rs  modulino_pixels_i2c.rs  ssd1306.rs  ssd1306_text.rs  ssd1315.rs  ssd1315_text.rs  st7735s_spi.rs  st7735s_spi_text.rs  vl53l4cd_i2c.rs  ws2812.pio  ws2812.rs  zermatt.rs  zermatt_snow.rs
src/: main.rs
