[package]
name = "rust-rpico2-discovery"
version = "0.2.0"
edition = "2024"

[dependencies]
# Cortex-M
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"

# Panic Handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }
rp235x-hal = { version = "0.3.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
] }
rp-binary-info = "0.1.1"
nb = "1.0.0"
micromath = "1.1.1"

[dev-dependencies]
embedded-graphics = "0.8.1"
dht20 = "0.1.0"
lis3dh = "0.4.4"
ssd1306 = "0.8.4"
ssd1315 = "0.2.3"
tinybmp = "0.6.0"
bme280 = "0.5.1"
bh1750 = "0.1.0"
bmp280-ehal = "0.0.6"
vl53l4cd-ulp = "0.1.1"
libm = "0.2.11"
smart-leds = "0.3.0"
ws2812-pio = { git = "https://github.com/melastmohican/ws2812-pio-rs.git", branch = "main", features = ["rp235x"], default-features = false }
mipidsi = "0.8.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-hal-bus = "0.2.0"
epd-spectra = "0.4.0"
ssd1681 = "0.3.0"
format_no_std = "1.2.0"
